[package]
name = "x25519-dalek"
version = "0.5.2"
authors = [
    "Isis Lovecruft <isis@patternsinthevoid.net>", 
    "DebugSteven <debugsteven@gmail.com>",
    "Henry de Valence <hdevalence@hdevalence.ca>",
]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/x25519-dalek"
homepage = "https://dalek.rs/"
documentation = "https://docs.rs/x25519-dalek"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "curve25519", "key-exchange", "x25519", "diffie-hellman"]
description = "X25519 elliptic curve Diffie-Hellman key exchange in pure-Rust, using curve25519-dalek."
exclude = [
    ".gitignore",
    ".travis.yml",
    "CONTRIBUTING.md",
]

[badges]
travis-ci = { repository = "dalek-cryptography/x25519-dalek", branch = "master"}

[package.metadata.docs.rs]
#rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/curve25519-dalek-1.0.1/docs/assets/rustdoc-include-katex-header.html"]
features = ["nightly"]

[dependencies]
curve25519-dalek = { git = "https://github.com/xoloki/curve25519-dalek", rev = "d42497c24c9a194c092343b19f01d44f9d5ccf40", default-features = false, features = ["u64_backend", "nightly", "alloc"] }
rand_core = { version = "0.3", default-features = false }
clear_on_drop = { version = "0.2" }

[dev-dependencies]
criterion = "0.2"
rand_os = "0.1"

[[bench]]
name = "x25519"
harness = false

[features]
default = ["std", "u64_backend"]
std = ["curve25519-dalek/std"]
alloc = ["rand_core/alloc"]
nightly = ["curve25519-dalek/nightly", "clear_on_drop/nightly"]
u64_backend = ["curve25519-dalek/u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]
